feat(replica): server base implementation
