# src/replica/controllers/replicaController.ts
@@ -1,20 +1,28 @@
+/* eslint-disable @typescript-eslint/naming-convention */ // query params are in snake case
 import { Logger } from '@map-colonies/js-logger';
 import { RequestHandler } from 'express';
 import httpStatus, { StatusCodes } from 'http-status-codes';
 import { injectable, inject } from 'tsyringe';
+import { SnakeCasedProperties } from 'type-fest';
+
 import { Services } from '../../common/constants';
 import { HttpError } from '../../common/errors';
 import { ReplicaAlreadyExistsError, ReplicaNotFoundError } from '../models/errors';
-import { Replica, ReplicaResponse } from '../models/replica';
-
+import { Replica, ReplicaMetadata, ReplicaResponse } from '../models/replica';
 import { ReplicaManager } from '../models/replicaManager';
-import { GeneralResponse } from '../../common/interfaces';
-import { BaseReplicaFilter, BaseReplicaFilterQueryParams } from '../models/replicaFilter';
+import { BaseReplicaFilter, PrivateReplicaFilter, PublicReplicaFilter } from '../models/replicaFilter';
+
+type BaseReplicaFilterQueryParams = SnakeCasedProperties<BaseReplicaFilter>;
+type PublicReplicaFilterQueryParams = SnakeCasedProperties<PublicReplicaFilter>;
+type PrivateReplicaFilterQueryParams = SnakeCasedProperties<PrivateReplicaFilter>;
 
 type GetReplicaByIdHandler = RequestHandler<{ replicaId: string }, ReplicaResponse>;
 type GetLatestReplicaHandler = RequestHandler<undefined, ReplicaResponse, undefined, BaseReplicaFilterQueryParams>;
-type PostReplicaHandler = RequestHandler<undefined, GeneralResponse, Replica>;
-type PostFileHandler = RequestHandler<{ replicaId: string }, GeneralResponse>;
+type GetReplicasHandler = RequestHandler<undefined, ReplicaResponse[], undefined, PublicReplicaFilterQueryParams>;
+type PostReplicaHandler = RequestHandler<undefined, undefined, Replica>;
+type PostFileHandler = RequestHandler<{ replicaId: string }>;
+type PatchReplicasHandler = RequestHandler<undefined, undefined, ReplicaMetadata, { filter: PrivateReplicaFilterQueryParams }>;
+type DeleteReplicasHandler = RequestHandler<undefined, ReplicaResponse[], undefined, { filter: PrivateReplicaFilterQueryParams }>;
 
 @injectable()
 export class ReplicaController {
@@ -46,10 +54,28 @@ export class ReplicaController {
     }
   };
 
+  public getReplicas: GetReplicasHandler = async (req, res, next) => {
+    try {
+      const { replica_type, geometry_type, layer_id, exclusive_from, to, sort } = req.query;
+      const filter: PublicReplicaFilter = {
+        replicaType: replica_type,
+        geometryType: geometry_type,
+        layerId: layer_id,
+        exclusiveFrom: exclusive_from,
+        to: to,
+        sort: sort,
+      };
+      const replicas = await this.manager.getReplicas(filter);
+      return res.status(httpStatus.OK).json(replicas);
+    } catch (error) {
+      return next(error);
+    }
+  };
+
   public postReplica: PostReplicaHandler = async (req, res, next) => {
     try {
       await this.manager.createReplica(req.body);
-      return res.status(httpStatus.CREATED).json({ message: httpStatus.getStatusText(httpStatus.CREATED) });
+      return res.status(httpStatus.CREATED).json();
     } catch (error) {
       if (error instanceof ReplicaAlreadyExistsError) {
         (error as HttpError).status = StatusCodes.CONFLICT;
@@ -61,11 +87,49 @@ export class ReplicaController {
   public postFile: PostFileHandler = async (req, res, next) => {
     try {
       await this.manager.createFileOnReplica(req.params.replicaId);
-      return res.status(httpStatus.OK).json({ message: httpStatus.getStatusText(httpStatus.CREATED) });
+      return res.status(httpStatus.OK).json();
     } catch (error) {
       if (error instanceof ReplicaNotFoundError) {
         (error as HttpError).status = StatusCodes.NOT_FOUND;
       }
+      return next(error);
+    }
+  };
+
+  public patchReplicas: PatchReplicasHandler = async (req, res, next) => {
+    try {
+      const { replica_type, geometry_type, layer_id, sync_id, is_hidden, exclusive_from, to } = req.query.filter;
+      const filter: PrivateReplicaFilter = {
+        replicaType: replica_type,
+        geometryType: geometry_type,
+        layerId: layer_id,
+        syncId: sync_id,
+        isHidden: is_hidden,
+        exclusiveFrom: exclusive_from,
+        to: to,
+      };
+      await this.manager.updateReplicas(filter, req.body);
+      return res.status(httpStatus.OK).json();
+    } catch (error) {
+      return next(error);
+    }
+  };
+
+  public deleteReplicas: DeleteReplicasHandler = async (req, res, next) => {
+    try {
+      const { replica_type, geometry_type, layer_id, sync_id, is_hidden, exclusive_from, to } = req.query.filter;
+      const filter: PrivateReplicaFilter = {
+        replicaType: replica_type,
+        geometryType: geometry_type,
+        layerId: layer_id,
+        syncId: sync_id,
+        isHidden: is_hidden,
+        exclusiveFrom: exclusive_from,
+        to: to,
+      };
+      const deletedReplicas = await this.manager.deleteReplicas(filter);
+      return res.status(httpStatus.OK).json(deletedReplicas);
+    } catch (error) {
       return next(error);
     }
   };
